# mdvalidate

./: .gitignore  .prettierrc.yml  .release.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  _quarto.yml  build.rs  cliff.toml  coverage.sh  flake.nix  justfile  release.sh  release.toml  spec.qmd  srs.html  srs.qmd  srs.tex  srs.typ
.cargo/: release.toml
.github/workflows/: build.yaml  changesets.yaml  check.yaml  checks.yaml  docs.yaml  release.yaml  tests.yaml
docs/: .gitignore  astro.config.mts  bugs.typ  design_document.typ  diagrams.sh  functional_test_case_description.typ  package.json  presentation.typ  software_requirements_specification.typ  template.typ  user_manual.typ
docs/images/: classDiagram.mmd  interpreter.mmd
docs/src/components/: SchemaAndInput.astro  TODO.astro
docs/src/content/docs/: getting-started.mdx  index.mdx
docs/src/content/docs/matchers/: 01-literals.mdx  02-matchers.mdx  03-lists.mdx  04-code.mdx  05-tables.mdx  06-html.mdx
docs/src/content/docs/misc/: 01-links.mdx
example/: feed.js  input.md  schema.md
examples/: simple.rs
examples/cli/: feed.js  input.md  schema.md
nix/: build.nix
nix/builds/: default.nix  static.nix
scripts/: coverage.sh  flame.sh  sexp_pprint.py
src/: cmd.rs  env.rs  lib.rs  main.rs  path_or_stdio.rs
src/helpers/: mod.rs  node_print.rs  tree_inspector.rs
src/mdschema/: mod.rs
src/mdschema/nodes/: kinds.rs  node_types.json  types.py
src/mdschema/reports/: errors.rs  mod.rs  pretty_print.rs  validation_report.rs
src/mdschema/validation/: errors.rs  mod.rs  node_pos_pair.rs  ts_types.rs  ts_utils.rs  utils.rs  validator.rs
src/mdschema/validation/matchers/: matcher.rs  matcher_extras.rs
src/mdschema/validation/walkers/: mod.rs  node_walker.rs  utils.rs  validation_result.rs
src/mdschema/validation/walkers/helpers/: check_repeating_matchers.rs  compare_node_kinds.rs  compare_text_contents.rs  count_non_literal_matchers_in_children.rs  curly_matchers.rs  expected_input_nodes.rs  node_children_lengths.rs
src/mdschema/validation/walkers/validators/: code.rs  containers.rs  headings.rs  links.rs  lists.rs  matchers.rs  mod.rs  nodes.rs  quotes.rs  tables.rs  textual.rs
src/mdschema/validator/: binode_validator.rs  cursor_pair.rs  errors.rs  matcher.rs  mod.rs  node_pos_pair.rs  node_validator.rs  node_validators.rs  node_walker.rs  nodes.rs  state.rs  ts_types.rs  ts_utils.rs  utils.rs  validator.rs  validator_state.rs  validator_walker.rs  zipper_tree_validator.rs
src/mdschema/validator/matcher/: matcher.rs  matcher_extras.rs  mod.rs
src/mdschema/validator/node_walker/: code_vs_code.rs  list_vs_list.rs  macros.rs  matcher_vs_list.rs  matcher_vs_text.rs  mod.rs  node_vs_node.rs  node_walker.rs  ruler_vs_ruler.rs  text_vs_text.rs  utils.rs  validation_result.rs
src/mdschema/validator/node_walker/helpers/: check_repeating_matchers.rs  compare_node_kinds.rs  compare_text_contents.rs  count_non_literal_matchers_in_children.rs  curly_matchers.rs  expected_input_nodes.rs  mod.rs  node_children_lengths.rs  node_kinds.rs  text_contents.rs
src/mdschema/validator/node_walker/validators/: code.rs  containers.rs  headings.rs  links.rs  (+11 more)
src/tests/: matchers.rs  mod.rs
src/validate/: mod.rs  validate.rs  validator.rs
tests/: code.rs  headings.rs  links.rs  lists.rs  matchers.rs  misc.rs  mod.rs  nodes.rs  quotes.rs  rulers.rs  tables.rs  textual.rs  textual_container.rs
tests/helpers/: mod.rs
utils/: Cargo.toml
utils/src/: lib.rs  main.rs  node_print.rs
