[workspace]
members = [".", "utils"]
resolver = "2"

[package]
name = "mdvalidate"
version = "0.2.1"
description = "Markdown schema validation engine"
license = "MIT"
documentation = "https://github.com/404wolf/mdvalidate"
homepage = "https://github.com/404wolf/mdvalidate"
edition = "2024"

[[bin]]
name = "mdv"
path = "src/main.rs"
publish = true

[lib]
path = "src/lib.rs"

[dependencies]
ariadne = "0.5.1"
clap = {version = "4.5.48", features = ["derive"]}
colored = "3.0.0"
env_logger = "0.10.0"
envy = "0.4"
line-col = "0.2.1"
log = "0.4.28"
regex = "1.12.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tempfile = "3.23.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tree-sitter = "0.25.10"
tree-sitter-markdown = {package = "tree-sitter-markdown-fork", version = "0.7.1"}
ptree = "0.5.2"
paste = "1.0.15"
tabled = "0.20.0"
mdvalidate-utils = {version = "0.0.1", path = "utils"}

[dev-dependencies]
ptree = "0.5.2"

[features]
default = ["invariant_violations"]
invariant_violations = []

[[test]]
name = "tests"
path = "tests/mod.rs"
