[package]
name = "mdvalidate-utils"
version = "0.0.1"
edition = "2024"
description = "Utility functions for mdvalidate"
license = "MIT"
documentation = "https://github.com/404wolf/mdvalidate"
homepage = "https://github.com/404wolf/mdvalidate"

[dependencies]
ptree = "0.5.2"
tree-sitter = "0.25.10"
tree-sitter-markdown = {package = "tree-sitter-markdown-fork", version = "0.7.1"}

[lib]
path = "src/lib.rs"
